force-app/main/default/objects/Voucher__c/fields/Validity_area__c.field-meta.xml
<CustomField>
    <fullName>Validity_area__c</fullName>
    <label>Validity area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8000</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>8002</fullName>
                <label>Italy</label>
            </value>
            <value>
                <fullName>8004</fullName>
                <label>Worldwide</label>
            </value>
            <value>
                <fullName>8001</fullName>
                <label>Spain</label>
            </value>
            <value>
                <fullName>8003</fullName>
                <label>Allemagne</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>