force-app/main/default/objects/Voucher__c/fields/Validity_duration__c.field-meta.xml
<CustomField>
    <fullName>Validity_duration__c</fullName>
    <label>Validity duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>