force-app/main/default/objects/Voucher__c/fields/Valorisation__c.field-meta.xml
<CustomField>
    <fullName>Valorisation__c</fullName>
    <label>Valorisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>