force-app/main/default/objects/Voucher__c/fields/Voucher_Technique_10__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Technique_10__c</fullName>
    <label>Voucher Technique 10</label>
    <length>50</length>
    <type>Text</type>
</CustomField>