force-app/main/default/objects/Voucher__c/fields/Voucher_Technique_2__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Technique_2__c</fullName>
    <label>Voucher Technique 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>