force-app/main/default/objects/Voucher__c/fields/VoucherType__c.field-meta.xml
<CustomField>
    <fullName>VoucherType__c</fullName>
    <label>Voucher Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eclub</fullName>
                <label>BBH Club</label>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Commercial Operation</fullName>
            </value>
            <value>
                <fullName>RI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>