force-app/main/default/objects/Voucher__c/fields/Zone_de_validite__c.field-meta.xml
<CustomField>
    <fullName>Zone_de_validite__c</fullName>
    <formula>IF( RecordType.Name ==  $Label.Voucher_IR_RT_Emission_Name  || RecordType.Name ==  $Label.Voucher_IR_RT_OnCreation_Name ,&apos;France&apos; ,IF($Profile.Name == &apos;French Service Agent&apos; || $Profile.Name == &apos;French Service Manager&apos;, &apos;France&apos; , IF($Profile.Name == &apos;Italy Service Agent&apos; || $Profile.Name == &apos;Italy Service Manager&apos;,&apos;Italy&apos;,IF($Profile.Name == &apos;Spain Service Agent&apos; || $Profile.Name == &apos;Spain Service Manager&apos;,&apos;Spain&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone de validité</label>
    <type>Text</type>
</CustomField>