force-app/main/default/objects/Voucher__c/recordTypes/Eclub.recordType-meta.xml
<RecordType>
    <fullName>Eclub</fullName>
    <active>true</active>
    <label>Eclub</label>
</RecordType>