force-app/main/default/objects/Voucher__c/recordTypes/Eclub_creation.recordType-meta.xml
<RecordType>
    <fullName>Eclub_creation</fullName>
    <active>true</active>
    <label>Eclub Création</label>
</RecordType>