force-app/main/default/objects/Voucher__c/recordTypes/IR.recordType-meta.xml
<RecordType>
    <fullName>IR</fullName>
    <active>true</active>
    <description>Invité et Remboursé-C&apos;est pour afficher/masquer les champs à la page de Consultation/Modification des Vouchers</description>
    <label>IR</label>
</RecordType>