force-app/main/default/objects/Voucher__c/recordTypes/IRCreation.recordType-meta.xml
<RecordType>
    <fullName>IRCreation</fullName>
    <active>true</active>
    <description>Invité et Remboursé-C&apos;est pour changer les champs qui s&apos;affichent à la création des Vouchers</description>
    <label>IR-Création</label>
</RecordType>