force-app/main/default/objects/Voucher__c/recordTypes/OC.recordType-meta.xml
<RecordType>
    <fullName>OC</fullName>
    <active>true</active>
    <description>Opération Commerciale-C&apos;est pour afficher/masquer les champs à la page de Consultation/Modification des Vouchers</description>
    <label>OC</label>
</RecordType>