force-app/main/default/objects/Voucher__c/recordTypes/OC_Creation.recordType-meta.xml
<RecordType>
    <fullName>OC_Creation</fullName>
    <active>true</active>
    <description>Opération Commerciale-C&apos;est pour changer les champs qui s&apos;affichent à la création des Vouchers</description>
    <label>OC Création</label>
</RecordType>