force-app/main/default/objects/Voucher__c/validationRules/VR03_Voucher_StatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Voucher_StatusChange</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 !$User.BypassValidationRule__c,
 RecordType.Name ==  $Label.Voucher_EClub_RT_Emission_Name,
ischanged(Statut__c),ISPICKVAL(Statut__c, &apos;Used&apos;),

  Not(ISPICKVAL( PRIORVALUE(Statut__c), &apos;Expired&apos;)),
$User.FirstName !=&apos;Technical&apos; , OR($User.LastName !=&apos;User&apos;, $User.LastName !=&apos;User2&apos;)
)</errorConditionFormula>
    <errorMessage>Seul le statut Périmé(e) peut être passé manuellement en Consomé(e)</errorMessage>
</ValidationRule>