force-app/main/default/objects/Voucher__c/validationRules/VR04_Voucher_StatusAnnule.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_Voucher_StatusAnnule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 !$User.BypassValidationRule__c,
 RecordType.Name ==  $Label.Voucher_EClub_RT_Emission_Name,
ischanged(Statut__c),
  ISPICKVAL(PRIORVALUE(Statut__c), &apos;Close&apos;),
 $User.FirstName !=&apos;Technical&apos;, OR($User.LastName !=&apos;User&apos;, $User.LastName !=&apos;User2&apos;)
)</errorConditionFormula>
    <errorMessage>Le Statut Annulé(e) ne peut pas être modifié</errorMessage>
</ValidationRule>