force-app/main/default/objects/Voucher__c/validationRules/VR05_Voucher_1IR_Pour_CaseLinkedToIR.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_Voucher_1IR_Pour_CaseLinkedToIR</fullName>
    <active>true</active>
    <errorConditionFormula>Demande_d_assistance__r.tech_NumberOfIR__c &gt;1</errorConditionFormula>
    <errorMessage>You cannot add more than 1 IR on Case related to IR</errorMessage>
</ValidationRule>