force-app/main/default/objects/Voucher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>code__c</columns>
    <columns>Case__c</columns>
    <columns>Date_of_use__c</columns>
    <columns>VoucherType__c</columns>
    <columns>expireDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Statut__c</columns>
    <columns>Prestation_offerte__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>